...
      if (isAuth == true) {
        message = "Login success!";
        showToast(message, position: ToastPosition.bottom);
        if (!mounted) return;
        Navigator.pushNamed(context, SecretScreenView);
      } else {
        message = "Incorrect username or password!";
        showToast(message, position: ToastPosition.bottom);
      }
    }
  }

  @override
...
